RESOLVED FIXED145936
[Mac] AirPlay menu button doesn't always show on page load
https://bugs.webkit.org/show_bug.cgi?id=145936
Summary [Mac] AirPlay menu button doesn't always show on page load
Eric Carlson
Reported 2015-06-12 13:07:17 PDT
The AirPlay menu button isn't always visible when the first page with <video> loads.
Attachments
Proposed patch. (6.71 KB, patch)
2015-06-12 13:26 PDT, Eric Carlson
bfulgham: review+
Eric Carlson
Comment 1 2015-06-12 13:07:49 PDT
Eric Carlson
Comment 2 2015-06-12 13:26:44 PDT
Created attachment 254816 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2015-06-12 13:27:52 PDT
Attachment 254816 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/mediasession/WebMediaSessionManager.h:78: The parameter name "tasks" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 4 2015-06-12 13:31:18 PDT
Comment on attachment 254816 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=254816&action=review r=me. I noticed a couple of typos, but nothing that needs to be re-reviewed. > Source/WebCore/ChangeLog:9 > + (WebCore::mediaProducerStateString): New, return a stream representing MediaStateFlags. return a *string* (not stream)? > Source/WebCore/ChangeLog:11 > + (WebCore::WebMediaSessionManager::toString): New, return a stream representing ConfigurationTasks. return a *string* (not stream)? > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:178 > + virtual bool wirelessVideoPlaybackDisabled() const override { return false; } We don't need to write 'virtual' when we also write 'override'. We've been changing this style elsewhere. But I don't care if you do so in this patch.
Eric Carlson
Comment 5 2015-06-12 13:42:57 PDT
Note You need to log in before you can comment on or make changes to this bug.